sort.basic.lessons.sort.basic.shell.AlgShellSort.scala.error
AlgShellSort:4: error: illegal start of simple expression
  var v = 0
  ^